# TestTask

./: .env  docker-compose.yml
Tests/backend_app/business_logic/: DateOperationsTest.py  PdDfOperationsTest.py
backend_app/: Dockerfile  db_connect.py  env_settings.py  main.py  payments.xlsx  pyproject.toml  utils.py
backend_app/business_logic/: date_operations.py  logic_funcs.py  pd_df_operations.py
backend_app/db_models/: agrmnt.py  db_funcs.py
backend_app/response_models/: models.py
backend_app/routes/: calc_router.py  load_result_router.py  main_router.py  start_router.py
input_data/: Данные.xlsx  Задача.docx
